-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0, 6.10.0 Beta1
-
None
-
-
adbb821bc (dev), 1423cc9d9 (6.10), 1df673c26 (6.9)
At some point after Qt 6.8, variable fonts have stopped working correctly with the Freetype backend. This can be seen by running the advancedtext example in Qt Quick on Linux, but it is also reproducible in a Qt Widgets application.
Running on DirectWrite does not exhibit the same problems, but when selecting the Freetype backend on Windows the bug is also seen.
For Gerrit Dashboard: QTBUG-139106 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
668646,2 | Freetype: Fix setting variable axes on named instances | dev | qt/qtbase | Status: MERGED | +2 | +1 |
670313,2 | Freetype: Fix setting variable axes on named instances | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
670379,2 | Freetype: Fix setting variable axes on named instances | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |