Freetype: Fix setting variable axes on named instances

If you give explicit values for variable axes, these should take
precedence, even if the initial values are from a named instance.

cc128d802c6d9c87a1e00a8a88d5e6590a7195f4 reordered the operations
so that the named instance was selected after setting the values,
thus overwriting them.

Pick-to: 6.9
Fixes: QTBUG-139106
Change-Id: I07b44718fd97c0c12c2cd65d0d7313580d9d6aa3
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit adbb821bc777512bb1d3396bae6d8a213e59f752)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>